# dos-machines

./: .gitignore  CHANGELOG.md  LICENSE  PKGBUILD  README.md  TODO.md  pyproject.toml
.dosmachines/: dosbox.conf
docs/: ARCHITECTURE.md
examples/: dosbox-staging.conf  dosbox-x-2025.10.07.conf
share/applications/: dos-machines.desktop
src/dos_machines/: __init__.py  __main__.py  app.py
src/dos_machines/application/: __init__.py  config_renderer.py  config_text.py  engine_registry.py  engine_support.py  import_service.py  launcher_service.py  preset_service.py  profile_service.py  schema_parser.py  settings_service.py  workspace_service.py
src/dos_machines/assets/system-presets/: 386_vga_sb_1990.conf  486_vga_sb_mt32.conf  586_vga_sb_midi.conf  ibm_at_1984_ega.conf  ibm_pc_1981_cga_speaker.conf  ibm_pc_1981_hercules.conf  ibm_pcjr_1983.conf  tandy_1000_1984.conf  vga_adlib_1987.conf
src/dos_machines/domain/: __init__.py  models.py  presets.py  system_machine_presets.py
src/dos_machines/ui/: __init__.py  create_machine_dialog.py  host_config_dialog.py  main_window.py  media.py
tests/: test_create_machine_dialog.py  test_engine_registry.py  test_engine_support.py  test_host_config_dialog.py  test_import_service.py  test_launcher_service.py  test_main_window.py  test_preset_service.py  test_profile_service.py  test_schema_parser.py  test_settings_service.py  test_workspace_service.py
tmp-config-drag/dos-machines/: settings.json
tmp-config-nested/dos-machines/: settings.json
tmp-config/dos-machines/: settings.json
