[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dos-machines"
version = "0.1.0"
description = "Folder-based DOS machine workspace and launcher editor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.gui-scripts]
dos-machines = "dos_machines.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
